--- a/catalog.html
+++ b/catalog.html
@@ -193,7 +193,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">3.8</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="iron-king.html">Подробнее <span class="books__pages">416 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="iron-king.html">Подробнее </a><span class="books__pages">416 страниц</span></div>
                         </div>
                       </div>
                     </li>
@@ -209,7 +209,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">4.2</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">336 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее </a><span class="books__pages">336 страниц</span></div>
                         </p>
                       </div>
                     </li>
@@ -225,7 +225,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">4.5</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">448 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее </a><span class="books__pages">448 страниц</span></div>
                         </div>
                       </div>
                     </li>
@@ -241,7 +241,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">3.9</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">320 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее </a><span class="books__pages">320 страниц</span></div>
                         </div>
                       </div>
                     </li>
@@ -257,7 +257,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">3.5</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">784 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее </a><span class="books__pages">784 страниц</span></div>
                         </div>
                       </div>
                     </li>
@@ -273,7 +273,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">4.4</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">384 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее </a><span class="books__pages">384 страниц</span></div>
                         </div>
                       </div>
                     </li>
@@ -289,7 +289,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">3.9</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">576 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее</a><span class="books__pages">576 страниц</span></div>
                         </div>
                       </div>
                     </li>
@@ -305,7 +305,7 @@
                                 fill="white" stroke="white" />
                             </svg><span class="books__star">4.1</span>
                           </p>
-                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее <span class="books__pages">448 страниц</span></a></div>
+                          <div class="books__wrapper"><a class="books__link" href="#">Подробнее </a><span class="books__pages">448 страниц</span></div>
                         </div>
                       </div>
                     </li>
