Создает шаблон и подключает его ко всем страницам

--- a/catalog.html
+++ b/catalog.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
   <head>
-    <meta charset="utf-8">
-    <title>Каталог книг</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
-    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
+    <title>Главная страница</title>
   </head>
   <body>
     <div class="wrapper">
