--- a/iron-king.html
+++ b/iron-king.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
     <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
-    <title>Главная страница</title>
+    <title>Название страницы</title>
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
         <div class="container">
-          <div class="header__wrapper"><a class="header__logo-link" href="index.html"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="header__wrapper"><a class="header__logo-link"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                   fill="#37393E" />
                 <path d="M32.3032 0C34.93 0 37.029 0.791432 38.5999 2.37429C40.1966 3.95716 40.995 6.13997 40.995 8.92275C40.995 11.7055 40.1966 13.8883 38.5999 15.4712C37.029 17.0285 34.93 17.8072 32.3032 17.8072C29.7278 17.8072 27.6546 17.0285 26.0837 15.4712C24.5385 13.8883 23.7658 11.7055 23.7658 8.92275C23.7658 6.13997 24.5385 3.95716 26.0837 2.37429C27.6546 0.791432 29.7278 0 32.3032 0ZM32.3418 2.71895C30.6163 2.71895 29.3158 3.25508 28.4401 4.32734C27.5645 5.3996 27.1267 6.9314 27.1267 8.92275C27.1267 10.8886 27.5645 12.4204 28.4401 13.5181C29.3158 14.5904 30.6163 15.1265 32.3418 15.1265C34.093 15.1265 35.4065 14.5904 36.2821 13.5181C37.1835 12.4204 37.6342 10.8886 37.6342 8.92275C37.6342 6.9314 37.1835 5.3996 36.2821 4.32734C35.4065 3.25508 34.093 2.71895 32.3418 2.71895Z"
@@ -46,7 +46,7 @@
                 </button>
               </div><a class="user-header__basket" href="#"><span class="visually-hidden">Корзина</span><svg class="user-header__basket-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8 8L8 7C8 4.79086 9.79086 3 12 3V3C14.2091 3 16 4.79086 16 7L16 8" stroke="white"
-                    stroke-width="2" stroke-linecap="round" />
+                  stroke-width="2" stroke-linecap="round" />
                   <path d="M15 14V12" stroke="white" stroke-width="2" stroke-linecap="round" />
                   <path d="M9 14V12" stroke="white" stroke-width="2" stroke-linecap="round" />
                   <path d="M4 12C4 10.1144 4 9.17157 4.58579 8.58579C5.17157 8 6.11438 8 8 8H16C17.8856 8 18.8284 8 19.4142 8.58579C20 9.17157 20 10.1144 20 12V13C20 16.7712 20 18.6569 18.8284 19.8284C17.6569 21 15.7712 21 12 21V21C8.22876 21 6.34315 21 5.17157 19.8284C4 18.6569 4 16.7712 4 13V12Z"
@@ -65,13 +65,8 @@
                 <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
               </ul>
               <ul class="user-nav">
-                <li class="user-nav__item"><a class="user-nav__link user-nav__link--transparent" href="#">
-                    <svg class="user-nav__icon" width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M14.7956 15.8353C14.4537 14.8785 13.7004 14.033 12.6526 13.4299C11.6047 12.8269 10.3208 12.5 9 12.5C7.6792 12.5 6.3953 12.8269 5.34743 13.4299C4.29957 14.033 3.5463 14.8785 3.20445 15.8353"
-                        stroke-width="1.4" stroke-linecap="round" />
-                      <circle cx="9" cy="6.5" r="3" stroke-width="1.4" stroke-linecap="round" />
-                    </svg><span class="user-nav__text">Кирилл</span></a></li>
-                <li class="user-nav__item"><a class="user-nav__link user-nav__link--transparent user-nav__link--red" href="#"><span class="user-nav__text">Выход</span></a></li>
+                <li class="user-nav__item"><a class="user-nav__link user-nav__link--transparent" href="#"><span class="user-nav__text">Регистрация</span></a></li>
+                <li class="user-nav__item"><a class="user-nav__link" href="#"><span class="user-nav__text">Вход</span></a></li>
               </ul>
             </div>
           </div>
@@ -83,8 +78,7 @@
             <div class="container">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Главная страница</a></li>
-                <li class="breadcrumbs__item"><a class="breadcrumbs__link breadcrumbs__link--slash" href="catalog.html">Каталог книг</a></li>
-                <li class="breadcrumbs__item"><span class="breadcrumbs__text">Железный король</span></li>
+                <li class="breadcrumbs__item"><span class="breadcrumbs__text">Каталог книг</span></li>
               </ul>
             </div>
           </section>
@@ -245,7 +239,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer__wrapper">
-            <div class="footer__col"><a class="footer__logo-link" href="index.html"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="footer__col"><a class="footer__logo-link"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                     fill="white" />
                   <path d="M32.3032 0C34.93 0 37.029 0.791432 38.5999 2.37429C40.1966 3.95716 40.995 6.13997 40.995 8.92275C40.995 11.7055 40.1966 13.8883 38.5999 15.4712C37.029 17.0285 34.93 17.8072 32.3032 17.8072C29.7278 17.8072 27.6546 17.0285 26.0837 15.4712C24.5385 13.8883 23.7658 11.7055 23.7658 8.92275C23.7658 6.13997 24.5385 3.95716 26.0837 2.37429C27.6546 0.791432 29.7278 0 32.3032 0ZM32.3418 2.71895C30.6163 2.71895 29.3158 3.25508 28.4401 4.32734C27.5645 5.3996 27.1267 6.9314 27.1267 8.92275C27.1267 10.8886 27.5645 12.4204 28.4401 13.5181C29.3158 14.5904 30.6163 15.1265 32.3418 15.1265C34.093 15.1265 35.4065 14.5904 36.2821 13.5181C37.1835 12.4204 37.6342 10.8886 37.6342 8.92275C37.6342 6.9314 37.1835 5.3996 36.2821 4.32734C35.4065 3.25508 34.093 2.71895 32.3418 2.71895Z"
