Выводит данные в разметку с помощью циклов

--- a/modules/reviews/reviews.html
+++ b/modules/reviews/reviews.html
@@ -21,7 +21,7 @@
             <div class="reviews__box-images"><img class="reviews__img" src="undefinedreview-2.jpg" alt="Фото автора отзыва" width="80" height="80"/></div>
             <div class="reviews__box">
               <h3 class="reviews__name">Елизавета Марьина</h3>
-              <p class="reviews__count">Купила 76 книг</p>
+              <p class="reviews__count">Купил 76 книг</p>
             </div>
           </div>
           <p class="reviews__review">Удобная навигация, большой выбор, книги в подарок при определенной сумме заказа. Заказ собирают без ошибок, привозят без задержек</p>
@@ -33,7 +33,7 @@
             <div class="reviews__box-images"><img class="reviews__img" src="undefinedreview-3.jpg" alt="Фото автора отзыва" width="80" height="80"/></div>
             <div class="reviews__box">
               <h3 class="reviews__name">Полина Аленичева</h3>
-              <p class="reviews__count">Купила 35 книг</p>
+              <p class="reviews__count">Купил 35 книг</p>
             </div>
           </div>
           <p class="reviews__review">Удобный каталог, полезные отзывы на книги, так же есть видео обзоры на книги. Иногда можно приобрести дорогое издание за «символическую» цену.</p>
