--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
                   </li>
                 </ul>
                 <ul class="slider__bullets">
-                  <li class="slider__bullet">
-                    <button class="slider__bullet-button slider__bullet-button--active"><span class="visually-hidden">Первый слайд</span></button>
-                  </li>
-                  <li class="slider__bullet">
-                    <button class="slider__bullet-button"><span class="visually-hidden">Второй слайд</span></button>
-                  </li>
-                  <li class="slider__bullet">
-                    <button class="slider__bullet-button"><span class="visually-hidden">Третий слайд</span></button>
-                  </li>
+                            <li class="slider__bullet">
+                              <button class="slider__bullet-button slider__bullet-button--active"><span class="visually-hidden">Первый слайд</span></button>
+                            </li>
+                            <li class="slider__bullet">
+                              <button class="slider__bullet-button"><span class="visually-hidden">Второй слайд</span></button>
+                            </li>
+                            <li class="slider__bullet">
+                              <button class="slider__bullet-button"><span class="visually-hidden">Третий слайд</span></button>
+                            </li>
                 </ul>
                 <ul class="slider__arrows">
                   <li class="slider__arrow">
@@ -301,22 +301,21 @@
           </section>
           <section class="about">
             <div class="container">
-              <h2 class="about__title section__title">О нас
-                <ul class="about__list">
-                  <li class="about__item">
-                    <div class="about__wrapper">
-                      <h3 class="about__heading">По полочкам — крупнейший книжный интернет магазин</h3>
-                      <p class="about__text">Мы предлагаем большой выбор книг, поддерживая длительные и дружелюбные партнёрские отношения с большинством издательств. Мы любим книги, ценим любовь к книгам наших покупателей, поэтому стараемся сделать всё возможное, чтобы каждая книга нашла своего читателя. Наши продавцы разделяют вашу любовь к чтению и всегда рады помочь.</p>
-                    </div>
-                  </li>
-                  <li class="about__item">
-                    <div class="about__wrapper">
-                      <h3 class="about__heading">Почему покупать книги онлайн удобно?</h3>
-                      <p class="about__text">Что делать, если вам нужна особенная книга? Вдруг ее нет в наличии? Чтобы сэкономить время, загляните на наш сайт. Мы доставляем книги почтой, курьером, в пункты самовывоза или бесплатно в магазины сети. А еще у нас есть мобильное приложение, в котором удобно делать заказы. Вы можете добавить в него Карту Любимого Покупателя, чтобы копить бонусы и тратить их на покупки.</p>
-                    </div>
-                  </li>
-                </ul>
-              </h2>
+              <h2 class="about__title section__title">О нас</h2>
+              <ul class="about__list">
+                          <li class="about__item">
+                            <div class="about__wrapper">
+                              <h3 class="about__heading">По полочкам — крупнейший книжный интернет магазин</h3>
+                              <p class="about__text">Мы предлагаем большой выбор книг, поддерживая длительные и дружелюбные партнёрские отношения с большинством издательств. Мы любим книги, ценим любовь к книгам наших покупателей, поэтому стараемся сделать всё возможное, чтобы каждая книга нашла своего читателя. Наши продавцы разделяют вашу любовь к чтению и всегда рады помочь.</p>
+                            </div>
+                          </li>
+                          <li class="about__item">
+                            <div class="about__wrapper">
+                              <h3 class="about__heading">Почему покупать книги онлайн удобно?</h3>
+                              <p class="about__text">Что делать, если вам нужна особенная книга? Вдруг ее нет в наличии? Чтобы сэкономить время, загляните на наш сайт. Мы доставляем книги почтой, курьером, в пункты самовывоза или бесплатно в магазины сети. А еще у нас есть мобильное приложение, в котором удобно делать заказы. Вы можете добавить в него Карту Любимого Покупателя, чтобы копить бонусы и тратить их на покупки.</p>
+                            </div>
+                          </li>
+              </ul>
             </div>
           </section>
         </main>
