--- a/iron-king.html
+++ b/iron-king.html
@@ -83,8 +83,12 @@
           <section class="breadcrumbs">
             <div class="container">
               <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Главная страница</a></li>
-                <li class="breadcrumbs__item"><span class="breadcrumbs__text">Каталог книг</span></li>
+                          <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Главная страница</a>
+                          </li>
+                          <li class="breadcrumbs__item"><a class="breadcrumbs__link breadcrumbs__link--slash" href="catalog.html">Каталог книг</a>
+                          </li>
+                          <li class="breadcrumbs__item"><span class="breadcrumbs__text">Железный король</span>
+                          </li>
               </ul>
             </div>
           </section>
